--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="./css/main.css" type="text/css">
   </head>
   <body>
-    
-    <script src="./js/main.js"></script>
+    <section id="edit">
+      <p>You can change da world!</p>
+      <input id="edit-file" type="file" accept="image/*" required>
+      <button id="edit-button">Lets Change da world.</button>
+    </section>
+    <section id="cdw" hidden>
+      <audio id="cdw-audio" src="./audio/cdw.mp3"></audio>
+      <span id="cdw-background"></span>
+      <img id="cdw-image">
+      <span id="cdw-foreground"></span>
+    </section>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
