Modified: styling edit and fixed visibility

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <section id="edit">
-      <p>You can change da world!</p>
+      <h1>You can change da world!</h1>
+      <h4>First, choose the file:</h4>
       <input id="edit-file" type="file" accept="image/*" required>
+      <h4>And then</h4>
       <button id="edit-button">Lets Change da world.</button>
     </section>
     <section id="cdw" hidden>
